# farfalle

./: Cargo.toml  README.md
src/: core_api.rs  dec.rs  deck.rs  farfalle.rs  lib.rs  sane.rs  sanse.rs  wbc.rs  xorbuffer.rs
